--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <audio autoplay id="audio">
+        <audio id="audio">
             <source src="audio/scream.mp3" type="audio/mp3">
         </audio>
     <div class="hornavbar">
