--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             The HalloweenCon
         </title>
         <link rel="stylesheet" href="style.css">
+        <script src="myjsscript.js"></script>
     </head>
     <body>
         <audio id="audio" autoplay>
