--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-in">
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Jimmy Jayant">
         <meta name="description" content="W3Schools.com Halloween Event Project hosted on Github">
@@ -11,13 +12,16 @@
             The HalloweenCon 
         </title>
         <style>
-         
+         body {
+             display:flex;
+             flex-direction:column;
+            }
         </style>
     </head>
     <body>
         <div class="hornavbar">
             <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="previouscontest.html">Previous Contest</a></li>
             <li><a href="store.html">Store</a></li>
@@ -27,10 +31,10 @@
 
         <div class="about1">
             <h1>
-                About The HalloweenCon 
+                About The HalloweenCon<sup>&trade;</sup> 
             </h1>
 
-            <h2>
+            <p>
                 The HalloweenCon&trade; is an organization based in Tehsil-Samalkha, District-Panipat, India. 
                 <br>
                 Its owner is Mr. Jimmy Jayant. 
@@ -40,6 +44,7 @@
                 Also the organization have a store that deals in Halloween merchandise. 
                 <br>
                 The organization also have the online presence on social networking platform like facebook, twitter, etc. and also on Instagram. 
+                <br>
                 <br>
                 <address>
                     Office Number-123 
@@ -54,7 +59,7 @@
                     <br>
                     Country-India 
                 </address>
-            </h2>
+            </p>
         </div>
 
         <div class="footer">
@@ -66,9 +71,9 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="25" height="25"></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="25" height="25"></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="25" height="25"></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="25" height="25" alt="Facebook Logo"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="25" height="25" alt="Twitter Logo"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="25" height="25" alt="Instagram Logo"></a></li>
             </ul>
         </div>
     </body>
