--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-in">
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Jimmy Jayant">
         <meta name="description" content="W3Schools.com Halloween Event Project hosted on Github">
@@ -11,13 +12,17 @@
             The HalloweenCon 
         </title>
         <style>
-         
+         body {
+             min-height:100vh;
+             display:flex;
+             flex-direction:column;
+            }
         </style>
     </head>
     <body>
         <div class="hornavbar">
             <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="previouscontest.html">Previous Contest</a></li>
             <li><a href="store.html">Store</a></li>
@@ -49,7 +54,6 @@
             </label>
             <br>
             <textarea id="review" name="review" rows="10" cols="50">
-
             </textarea>
             <br>
             <br>
@@ -66,9 +70,9 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="25" height="25"></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="25" height="25"></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="25" height="25"></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="25" height="25" alt="Facebook Logo"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="25" height="25" alt="Twitter Logo"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="25" height="25" alt="Instagram Logo"></a></li>
             </ul>
         </div>
     
