--- a/history.html
+++ b/history.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-in">
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Jimmy Jayant">
         <meta name="description" content="W3Schools.com Halloween Event Project hosted on Github">
@@ -121,9 +122,9 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="25" height="25"></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="25" height="25"></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="25" height="25"></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="20" height="20" alt="Facebook logo"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter logo"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram logo"></a></li>
             </ul>
         </div>
     
