--- a/store.html
+++ b/store.html
@@ -10,6 +10,13 @@
             The HalloweenCon 
         </title>
         <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+                min-height:100vh;
+                display:flex;
+                flex-direction:column;
+            }
+        </style>
     </head>
     <body>
         <div class="hornavbar">
@@ -91,9 +98,6 @@
                          Toddler Costumes 
                     </p>
                 </div>
-                
-                
-
             </div>
         </div>
 
@@ -106,9 +110,9 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="25" height="25"></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="25" height="25"></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="25" height="25"></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="20" height="20"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20"></a></li>
             </ul>
         </div>
     </body>
