--- a/previouscontest.html
+++ b/previouscontest.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-in">
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Jimmy Jayant">
         <meta name="description" content="W3Schools.com Halloween Event Project hosted on Github">
@@ -10,11 +11,17 @@
             The HalloweenCon 
         </title>
         <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+                display:flex;
+                flex-direction:column;
+            }
+        </style>
     </head>
     <body>
         <div class="hornavbar">
             <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="previouscontest.html">Previous Contest</a></li>
             <li><a href="store.html">Store</a></li>
@@ -38,7 +45,7 @@
                         Pics of Winners 
                     </h1>
                     <div class="winner1">
-                    <img id="win1">
+                    <img id="win1" alt="Pic of Contest 1st Winner">
                     <p>
                         1st Winner
                         <br>
@@ -48,7 +55,7 @@
 
 
                     <div class="winner2">
-                    <img id="win2">
+                    <img id="win2" alt="Pic of Contest 2nd Winner">
                     <p>
                         2nd Winner
                         <br>
@@ -58,7 +65,7 @@
 
 
                     <div class="winner3">
-                        <img id="win3">
+                        <img id="win3" alt="Pic of Contest 3rd Winner">
                         <p>
                             3rd Winner
                             <br>
@@ -78,9 +85,9 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="25" height="25"></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="25" height="25"></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="25" height="25"></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="20" height="20" alt="Facebook Logo"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter Logo"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram Logo"></a></li>
             </ul>
         </div>
 
