--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             The HalloweenCon
         </title>
         <link rel="stylesheet" href="style.css">
-        <script src="myjsscript.js"></script>
+        
     </head>
     <body>
-
+        <iframe src="audio/silence.mp3" allow="autoplay" style="display:none"></iframe>
         <audio id="audio" autoplay>
             <source src="audio/scream.mp3" type="audio/mp3">
         </audio>
