--- a/store.html
+++ b/store.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-in">
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Jimmy Jayant">
         <meta name="description" content="W3Schools.com Halloween Event Project hosted on Github">
@@ -15,13 +16,14 @@
                 min-height:100vh;
                 display:flex;
                 flex-direction:column;
+                flex-wrap:wrap;
             }
         </style>
     </head>
     <body>
         <div class="hornavbar">
             <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="history.html">History</a></li>
             <li><a href="previouscontest.html">Previous Contest</a></li>
             <li><a href="store.html">Store</a></li>
@@ -110,11 +112,10 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="20" height="20"></a></li>
-                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20"></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20"></a></li>
+                <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="20" height="20" alt="Facebook Logo"></a></li>
+                <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter Logo"></a></li>
+                <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram Logo"></a></li>
             </ul>
         </div>
     </body>
-
 </html>
