--- a/about.html
+++ b/about.html
@@ -62,7 +62,11 @@
                     Country-India 
                 </address>
             </p>
-        </div>
+        
+          <div class="map1">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6962.845642744833!2d76.99863260415073!3d29.240527200000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390dc92b2b1caca3%3A0xdb0dfc4a90d827ce!2sSamalkha%20Ward%20Number%207!5e0!3m2!1sen!2sin!4v1678599908611!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+           </div>
 
         <div class="footer">
             <ul>
