--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
             The HalloweenCon
         </title>
         <link rel="stylesheet" href="style.css">
+        <script src="myjsscript.js"></script>
     </head>
     <body>
+        <!--
         <iframe src="audio/silence.mp3" allow="autoplay" style="display:none"></iframe>
-
-        <audio autoplay>
+        -->
+        
+        <audio id="audio" autoplay>
             <source src="audio/scream.mp3" type="audio/mp3">
         </audio>
 
@@ -162,9 +165,9 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
         <ul>
-            <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="20" height="20" alt="Facebook logo"></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter logo"></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram logo"></a></li>
+            <li><a href="https://www.facebook.com" target="_blank"><img src="Images/facebook.png" width="20" height="20" alt="Facebook Logo"></a></li>
+            <li><a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter Logo"></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram Logo"></a></li>
         </ul>
     </div>
 
