--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <iframe src="audio/silence.mp3" allow="autoplay" style="display:none"></iframe>
         -->
         
-        <audio id="audio" autoplay>
-            <source src="audio/scream.mp3" type="audio/mp3">
+        <audio id="audio" autoplay preload="auto">
+            <source src="audio/scream.mp3" type="audio/mpeg">
         </audio>
 
     <div class="hornavbar">
