--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         
         <audio id="audio" autoplay preload="auto">
-            <source src="audio/scream.mp3" type="audio/mpeg">
+            <source src="Halloween2022/audio/scream.mp3" type="audio/mpeg">
         </audio>
 
     <div class="hornavbar">
