Commenting the base tag in index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="W3Schools.com Halloween Event Project hosted on Github">
         <meta name="keywords" content="w3schools, halloween, project, jimmy jayant,github">
         <link rel="icon" href="Images/favicon.ico">
-        <base href="https://jimmyjayant.github.io/Halloween2022/">
+        <!--<base href="https://jimmyjayant.github.io/Halloween2022/">-->
         <title>
             The HalloweenCon
         </title>
