Removing the base tag comment and change the type attribute of the audio tag from mpeg to mp3

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="description" content="W3Schools.com Halloween Event Project hosted on Github">
         <meta name="keywords" content="w3schools, halloween, project, jimmy jayant,github">
         <link rel="icon" href="Images/favicon.ico">
-        <!--<base href="https://jimmyjayant.github.io/Halloween2022/">-->
         <title>
             The HalloweenCon
         </title>
@@ -17,7 +16,7 @@
     <body>
         
         <audio id="audio" autoplay preload="auto">
-            <source src="/Halloween2022/audio/scream.mp3" type="audio/mpeg">
+            <source src="/Halloween2022/audio/scream.mp3" type="audio/mp3">
         </audio>
 
     <div class="hornavbar">
