--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         
-        <audio id="audio" autoplay>
+        <audio id="audio" autoplay preload="auto">
             <source src="/Halloween2022/audio/scream.mp3" type="audio/mp3">
         </audio>
 
