Change the audio tag type attribute from audio/mp3 to audio/mpeg

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         
         <audio id="audio" autoplay preload="auto">
-            <source src="/Halloween2022/audio/scream.mp3" type="audio/mp3">
+            <source src="/Halloween2022/audio/scream.mp3" type="audio/mpeg">
         </audio>
 
     <div class="hornavbar">
