--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         
-        <audio id="audio" autoplay preload="auto">
+        <audio id="audio" autoplay>
             <source src="/Halloween2022/audio/scream.mp3" type="audio/mpeg">
         </audio>
 
