Add the audio file on the same level as index.html file and also remove the window.onload function code from myjsscript.js file

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </head>
     <body>
         
-        <audio id="audio" autoplay>
-            <source src="/Halloween2022/audio/scream.mp3" type="audio/mpeg">
+        <audio id="audio" autoplay preload="auto">
+            <source src="/Halloween2022/scream.mp3" type="audio/mpeg">
         </audio>
 
     <div class="hornavbar">
