Add accept attribute to the input type file and required attribute to the gender radio element, if webpage is previouscontest.html then respective js code will be active, improve css of form of index.html webpage.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </label>
 
                 <div class="maleradio">
-                    <input type="radio" id="male" name="gender" value="Male">
+                    <input type="radio" id="male" name="gender" value="Male" required>
                     <label for="male" class="mradio">
                         Male
                     </label>
@@ -164,7 +164,7 @@
                 <label for="upload">
                     Upload Contest Selfie:- 
                 </label>
-                <input class="fnameclass" type="file" id="upload" name="fileupload" required>
+                <input class="fnameclass" type="file" id="upload" name="fileupload" accept="image/png, image/jpeg, image/jpg" required>
         
 
                 <input type="submit" id="sub" name="sub" value="Submit">
