Customise the css of history.html webpage.

--- a/history.html
+++ b/history.html
@@ -133,7 +133,14 @@
             <h2>
                 Visual History of Halloween  
             </h2>
-            <img src="Images/visual-history.jpg" alt="Halloween History Images" class="hisimg1">
+
+            <p>
+                Click on the image below to view the Halloween History. 
+            </p>
+
+            <a href="Images/visual-history.jpg" alt="Click on the image to see the bigger image">
+                <img src="Images/visual-history.jpg" alt="Halloween History Images" class="hisimg1">
+            </a>
         </div>
 
         <div class="footer">
