The js code to show or hide navbar below 600px is replaced with css target pseudo class. And navbar is given z index 5 so that it can stack on top of everything.

--- a/contact.html
+++ b/contact.html
@@ -25,19 +25,19 @@
     </head>
     <body>
         <div class="header">
-            <div class="hamburgermenu" onclick="showmenu()">
+            <a class="hamburgermenu" href="#navbar600">
                 <div></div>
                 <div></div>
                 <div></div>
-            </div>
+            </a>
 
             <div class="heading">
                 The HalloweenCon<sup>&trade;</sup> 
             </div>
         </div>
 
-        <div class="navbar">
-            <a href="#" onclick="hidemenu()" id="closemenu"><span>&times;</span></a>
+        <div class="navbar" id="navbar600">
+            <a href="#" id="closemenu"><span>&times;</span></a>
             <a href="index.html">Home</a>
             <a href="history.html">History</a>
             <a href="previouscontest.html">Previous Contest</a>
