--- a/previouscontest.html
+++ b/previouscontest.html
@@ -28,19 +28,19 @@
     </head>
     <body>
         <div class="header">
-            <div class="hamburgermenu" onclick="showmenu()">
+            <a class="hamburgermenu" href="#navbar600">
                 <div></div>
                 <div></div>
                 <div></div>
-            </div>
+            </a>
 
             <div class="heading">
                 The HalloweenCon<sup>&trade;</sup> 
             </div>
         </div>
 
-        <div class="navbar">
-            <a href="#" onclick="hidemenu()" id="closemenu"><span>&times;</span></a>
+        <div class="navbar" id="navbar600">
+            <a href="#" id="closemenu"><span>&times;</span></a>
             <a href="index.html">Home</a>
             <a href="history.html">History</a>
             <a href="previouscontest.html">Previous Contest</a>
@@ -71,6 +71,7 @@
                 <a href="#">2022</a>
                 -->
 
+                
                 <div>
                     <input type="radio" name="year" id="year2018" value=2018>
                     <label for="year2018">2018</label>
