Provide active Link javascript code and also improving the css code of about.html and contact.html webpage.

--- a/history.html
+++ b/history.html
@@ -11,7 +11,6 @@
         <title>
             The HalloweenCon 
         </title>
-        <link rel="icon" href="Images/favicon.ico">
         <style>
             body {
                 background-color:#555;
@@ -150,5 +149,10 @@
             <a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter Logo"></a>
             <a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram Logo"></a>
         </div>
+
+        <script src="myjsscript.js"></script>
+        <noscript>
+            Your web browser does not support JavaScript. 
+        </noscript>
     </body>
 </html>
