--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 </label>
                 <input class="fnameclass" type="text" id="lname" name="lname" placeholder="Enter Your Last Name Here" required>
         
-                <label for="gender">
+                <label>
                     Gender:- 
                 </label>
 
@@ -180,5 +180,10 @@
             <a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter Logo"></a>
             <a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram Logo"></a>
         </div>
+
+        <script src="myjsscript.js"></script>
+        <noscript>
+            Your web browser does not support JavaScript. 
+        </noscript>
     </body>
 </html>
