--- a/contact.html
+++ b/contact.html
@@ -46,29 +46,29 @@
                 <span class="freaky">A</span> Contact Form <span class="freaky">A</span>
             </h1>
             <form>
-            <label for="name">
-                Name 
-            </label>
-            <br>
-            <input class="contactinput" type="text" id="name" name="name" size="50" maxlength="50" placeholder="Enter Your Name here" required>
-            <br>
-            <br>
-            <label for="email">
-                Email 
-            </label>
-            <br>
-            <input class="contactinput" type="email" id="email" name="email" placeholder="Enter your email here" validate required>
-            <br>
-            <br>
-            <label for="review">
-                Message 
-            </label>
-            <br>
-            <textarea id="review" name="review" rows="10" cols="50">
-            </textarea>
-            <br>
-            <br>
-            <input class="subbut" type="submit" value="Submit">
+                <label for="name">
+                    Name 
+                </label>
+                <br>
+                <input class="contactinput" type="text" id="name" name="name" size="50" maxlength="50" placeholder="Enter Your Name here" required>
+                <br>
+                <br>
+                <label for="email">
+                    Email 
+                </label>
+                <br>
+                <input class="contactinput" type="email" id="email" name="email" placeholder="Enter your email here" validate required>
+                <br>
+                <br>
+                <label for="review">
+                    Message 
+                </label>
+                <br>
+                <textarea id="review" name="review" rows="10" cols="50">
+                </textarea>
+                <br>
+                <br>
+                <input class="subbut" type="submit" value="Submit">
             </form>
         </div>
 
@@ -83,6 +83,11 @@
             <a href="https://www.twitter.com" target="_blank"><img src="Images/twitter.png" width="20" height="20" alt="Twitter Logo"></a>
             <a href="https://www.instagram.com" target="_blank"><img src="Images/instagram.png" width="20" height="20" alt="Instagram Logo"></a>
         </div>
+
+        <script src="myjsscript.js"></script>
+        <noscript>
+            Your web browser does not support JavaScript. 
+        </noscript>
     
     </body>
 </html>
